fix text align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,7 +134,6 @@ input, select, textarea {
 
 	p, ul, ol, dl, table, blockquote, form {
 		margin: 0 0 2em 0;
-		text-align: justify;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -2925,6 +2924,10 @@ input, select, textarea {
 		#main header.major,
 		#main footer.major {
 			background: #ffffff;
+		}
+
+		#main p {
+			text-align: justify;
 		}
 
 /* Wide */
